2012-07-20  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/libYARP_OS/src/ResourceFinder.cpp: add /usr/local/etc
	to default search path, for convenience of OSX users 
	[thanks Francesco Nori] [thanks Lorenzo Natale]

	* src/tests/CMakeLists.txt, src/yarpview/CMakeLists.txt,
	src/yarpview/yarpview.cpp, ...: from Anne van Rossum, some more
	fixes for YARP without ACE [thanks Anne van Rossum]

	* extern/sqlite: move sqlite amalgamation to more standard
	location, following Daniele's lead [thanks Daniele Domenichelli]

2012-07-19  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/libYARP_OS/src/Value.cpp: fix Value::read, it wasn't
	correctly reading the value type when packed with a list 
	header [thanks Miguel Sarabia del Castillo]

	* src/libYARP_OS/harness/ValueTest.cpp: add check for
	Value::read [thanks Miguel Sarabia del Castillo]

2012-07-19 Ugo Pattacini <ugo.pattacini@iit.it>
    * cartesian & gaze I/F's: exposed events-oriented to address swig issues.

2012-07-16  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/libYARP_sig/src/Image.cpp: from Juxi Leitner, a fix for 
	GRAY images [thanks Juxi Leitner]

	* src/libYARP_OS/include/yarp/os/Run.h,
	src/libYARP_name/src/BootstrapServer.cpp,
	src/yarpserver/src/yarpserver3.cpp,
	src/libYARP_OS/include/yarp/os/impl/PlatformMap.h,
	src/libYARP_OS/include/yarp/os/impl/RunProcManager.h,
	src/libYARP_sig/src/Vector.cpp: from Anne van Rossum, some fixes 
	for YARP without ACE configuration [thanks Anne van Rossum]

2012-07-12  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* example/swig/yarp.i: translate ResourceFinder::configure to
	use std::vector<std::string> (aka SVector in YARP's SWIG
	translation) [thanks Stephane Lallee]

2012-07-10  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* example/swig/yarp.i: rename RFModule::attach(RpcServer&) out
	of harms way to attach_rpc_server [thanks Stephane Lallee]

2012-07-06  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/carriers/bayer_carrier/BayerCarrier.cpp