@@ -1,3 +1,8 @@
+2012-07-24  Paul Fitzpatrick  <paul@robotrebuilt.com>
+
+	* src/modules/kinect/OpenNI/KinectYarpDeviceServerLib: apply 
+	patch for "no mirror" option [thanks Juan G Victores]
+
 2012-07-20  Paul Fitzpatrick  <paul@robotrebuilt.com>
 
 	* src/libYARP_OS/src/ResourceFinder.cpp: add /usr/local/etc
